# CheetahFlow

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/rules/: frontend-patterns.mdc  migrations-guardrails.mdc  sqlite-guardrails.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  secret-scan.yml  stale.yml
backend/: alembic.ini  pyproject.toml
backend/agentflow/: auth.py  config.py  main.py  observability.py
backend/agentflow/adapters/: __init__.py  base.py  claude_code.py  openrouter.py  registry.py
backend/agentflow/api/: agents.py  health.py  projects.py  roadmap.py  runs.py  tasks.py  workflows.py
backend/agentflow/db/: agent_lookup.py  migrate.py  models.py  session.py
backend/agentflow/orchestration/: runner.py
backend/agentflow/schemas/: agents.py  projects.py  roadmap.py  runs.py  tasks.py  workflows.py
backend/alembic/: env.py
backend/alembic/versions/: 411552a3ef67_initial_schema.py  b2c9d4e5f6a1_add_projects_and_task_board.py  b51af82c6c5c_add_capabilities_roadmap.py
backend/tests/: conftest.py  test_agent_lookup.py  test_agents.py  test_claude_code_env.py  test_projects.py  test_roadmap.py  test_runner_prior_outputs.py  test_tasks.py  test_workflows.py
clickhouse/: users.xml
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
scripts/: init-langfuse-db.sql  reset-langfuse-db.sh
(+50 files in other folders)
